--- a/conf/caddy-services/pfipset.conf.example
+++ b/conf/caddy-services/pfipset.conf.example
@@ -1,14 +1,15 @@
 # Copyright (C) Inverse inc.
 *:22223 {
-  pfconfigpool
-  logger {
-    level INFO
-  }
-  statsd {
-    proto udp
-    prefix pfipset
-    address {$STATSD_ADDRESS}
-  }
-  pfipset
+	route {
+		pfconfigpool
+		logger {
+			level INFO
+		}
+		statsd {
+			proto udp
+			prefix pfipset
+			address {$STATSD_ADDRESS}
+		}
+		pfipset
+	}
 }
-
