--- a/conf/caddy-services/pfsso.conf.example
+++ b/conf/caddy-services/pfsso.conf.example
@@ -1,14 +1,15 @@
 # Copyright (C) Inverse inc.
 0.0.0.0:8777 {
-  pfconfigpool
-  logger {
-    level INFO
-  }
-  statsd {
-    proto udp
-    prefix pfsso
-    address {$STATSD_ADDRESS}
-  }
-  pfsso
+	route {
+		pfconfigpool
+		logger {
+			level INFO
+		}
+		statsd {
+			proto udp
+			prefix pfsso
+			address {$STATSD_ADDRESS}
+		}
+		pfsso
+	}
 }
-
