--- a/conf/caddy-services/httpdispatcher.conf.example
+++ b/conf/caddy-services/httpdispatcher.conf.example
@@ -1,4 +1,13 @@
 # Copyright (C) Inverse inc.
+{
+	admin off
+	log {
+		output stdout
+        format transform  "{common_log}"
+	}
+	auto_https off
+}
+
 :8888 {
   route {
   logger {
