--- a/conf/caddy-services/pfsso.conf.example
+++ b/conf/caddy-services/pfsso.conf.example
@@ -1,4 +1,13 @@
 # Copyright (C) Inverse inc.
+{
+	admin off
+	log {
+		output stdout
+        format transform  "{common_log}"
+	}
+	auto_https off
+}
+
 0.0.0.0:8777 {
 	route {
 		pfconfigpool
