--- a/conf/caddy-services/api.conf.example
+++ b/conf/caddy-services/api.conf.example
@@ -3,98 +3,96 @@
 	admin off
 	log {
 		output stdout
-        format transform  "{common_log}"
+		format transform "{common_log}"
 	}
 	auto_https off
 }
 
 :9999 {
-  tls /usr/local/pf/conf/ssl/server.crt /usr/local/pf/conf/ssl/server.key
+	tls /usr/local/pf/conf/ssl/server.crt /usr/local/pf/conf/ssl/server.key
 
+	handle_errors {
+		@502-503 expression `{err.status_code} in [502, 503]`
+		handle @502-503 {
+			rewrite * /{err.status_code}.json
+			file_server {
+				root /usr/local/pf/html/pfappserver/root/errors/
+			}
+		}
 
-  handle_errors {
-    @502-503 expression `{err.status_code} in [502, 503]`
-    handle @502-503 {
-        rewrite * /{err.status_code}.json
-        file_server {
-            root /usr/local/pf/html/pfappserver/root/errors/
-        }
-    }
+		handle {
+			respond ""
+		}
+	}
 
-    handle {
-        respond "" 
-    }
-  }
+	route {
+		pfconfigpool {
+			dont_rlock /api/v1/pfconnector/tunnel
+		}
 
-route {
-      pfconfigpool {
-        dont_rlock /api/v1/pfconnector/tunnel
-      }
+		logger {
+			level INFO
+		}
 
-      logger {
-        level INFO
-      }
+		statsd {
+			proto udp
+			prefix api
+			address {$STATSD_ADDRESS}
+		}
 
-#     statsd {
-#       proto udp
-#       prefix api
-#       address {$STATSD_ADDRESS}
-#     }
+		cors /api/v1 {
+			allowed_headers Authorization,Content-Type
+			methods GET,OPTIONS,POST,DELETE,PUT,PATCH
+		}
 
-      cors /api/v1 {
-        allowed_headers Authorization,Content-Type
-        methods GET,OPTIONS,POST,DELETE,PUT,PATCH
-      }
+		cors /api/v1.1 {
+			allowed_headers Authorization,Content-Type
+			methods GET,OPTIONS,POST,DELETE,PUT,PATCH
+		}
 
-      cors /api/v1.1 {
-        allowed_headers Authorization,Content-Type
-        methods GET,OPTIONS,POST,DELETE,PUT,PATCH
-      }
+		api-aaa {
+			no_auth /api/v1/pfconnector/tunnel
+			session_backend db mem
+		}
 
-      api-aaa {
-        no_auth /api/v1/pfconnector/tunnel
-        session_backend db mem
-      }
-      
-      api
+		api
 
-      log-tailer
+		log-tailer
 
-      # Job status access
-      job-status
+		# Job status access
+		job-status
 
-      reverse_proxy /api/v1/pfconnector {$PF_SERVICES_URL_PFCONNECTOR_SERVER} {
-      }
+		reverse_proxy /api/v1/pfconnector {$PF_SERVICES_URL_PFCONNECTOR_SERVER} {
+		}
 
-      # pfipset API access
-      reverse_proxy /api/v1/ipset/ {$PF_SERVICES_URL_PFIPSET} {
-      }
-      
-      # pfdhcp API access
-      reverse_proxy /api/v1/dhcp/ {$PF_SERVICES_URL_PFDHCP} {
-      }
-      
-      # pfsso API access
-      reverse_proxy /api/v1/firewall_sso/ {$PF_SERVICES_URL_PFSSO} {
-      }
+		# pfipset API access
+		reverse_proxy /api/v1/ipset/ {$PF_SERVICES_URL_PFIPSET} {
+		}
 
-      # pfpki API access
-      reverse_proxy /api/v1/pki/ {$PF_SERVICES_URL_PFPKI} {
-      }
-      
-      # Everything else goes to the Perl API
-      reverse_proxy /api/v1/ {$PF_SERVICES_URL_PFPERL_API} {
-      }
+		# pfdhcp API access
+		reverse_proxy /api/v1/dhcp/ {$PF_SERVICES_URL_PFDHCP} {
+		}
 
-      # Everything else goes to the Perl API
-      reverse_proxy /api/v1.1/ {$PF_SERVICES_URL_PFPERL_API} {
-      }
+		# pfsso API access
+		reverse_proxy /api/v1/firewall_sso/ {$PF_SERVICES_URL_PFSSO} {
+		}
 
-      # doh forward
-      reverse_proxy /dns-query {$PF_SERVICES_URL_PFDNS_DOH} {
-      }
+		# pfpki API access
+		reverse_proxy /api/v1/pki/ {$PF_SERVICES_URL_PFPKI} {
+		}
 
-  }
+		# Everything else goes to the Perl API
+		reverse_proxy /api/v1/ {$PF_SERVICES_URL_PFPERL_API} {
+		}
+
+		# Everything else goes to the Perl API
+		reverse_proxy /api/v1.1/ {$PF_SERVICES_URL_PFPERL_API} {
+		}
+
+		# doh forward
+		reverse_proxy /dns-query {$PF_SERVICES_URL_PFDNS_DOH} {
+		}
+	}
 }
 
 ####
@@ -112,4 +110,3 @@ route {
 #  api-aaa
 #  forwardproxy
 #}
-
