--- a/t/html/pfappserver/Makefile
+++ b/t/html/pfappserver/Makefile
@@ -2,20 +2,20 @@ BASE_URL :=
 CONFIG_FILE := cypress/config/cypress.config.js
 #DEBUG := cypress:*
 DEBUG :=
-X11DISPLAY :=
 
 .PHONY: all install test
 
 all:
 	@echo "Usage:"
 	@echo "make install-debian|install-rhel: update libraries, install cypress"
-	@echo "make test: run tests interactively with X11 (see X11DISPLAY=)"
+	@echo "make test: run tests interactively with X11 $DISPLAY"
 	@echo "make test-e2e: run tests headless"
 	@echo ""
 	@echo "make [target] BASE_URL=https://localhost:1443"
 	@echo "make [target] CONFIG_FILE=cypress/config/cypress.config.js"
 	@echo "make [target] DEBUG=cypress:*"
-	@echo "make [target] X11DISPLAY=\$$(cat /etc/resolv.conf | grep nameserver | awk '{print \$$2; exit;}'):0.0"
+	@echo ""
+	@echo "DISPLAY=\$$(cat /etc/resolv.conf | grep nameserver | awk '{print \$$2; exit;}'):0.0 make [target]"
 
 install-rhel:
 	yum install -y xorg-x11-server-Xvfb gtk2-devel gtk3-devel libnotify-devel GConf2 nss libXScrnSaver alsa-lib
@@ -29,5 +29,4 @@ test:
 	DEBUG=$(DEBUG) cypress open --config-file=$(CONFIG_FILE)
 
 test-e2e:
-	DEBUG=$(DEBUG) DISPLAY=$(X11DISPLAY) BROWSERSLIST_IGNORE_OLD_DATA=true CYPRESS_baseUrl=$(BASE_URL) cypress run --e2e --headless --config-file=$(CONFIG_FILE)
-
+	DEBUG=$(DEBUG) DISPLAY= BROWSERSLIST_IGNORE_OLD_DATA=true CYPRESS_baseUrl=$(BASE_URL) cypress run --e2e --headless --config-file=$(CONFIG_FILE)
