--- a/t/venom/scenarios/pfappserver/playbooks/run_tests.yml
+++ b/t/venom/scenarios/pfappserver/playbooks/run_tests.yml
@@ -6,6 +6,7 @@
   vars:
     test_suites:
     - pfappserver_configurator
+    - pfappserver_configuration
 
   tasks:
     - name: Run Venom testsuites
