--- a/t/venom/test_suites/pfappserver_configuration/run_e2e.yml
+++ b/t/venom/test_suites/pfappserver_configuration/run_e2e.yml
@@ -6,7 +6,7 @@ testcases:
       cd {{.html.pfappserver_dir}}
       make test-e2e \
         BASE_URL={{.pfserver_webadmin_url}} \
-        CONFIG_FILE=cypress/config/cypress.config-configurator.js \
+        CONFIG_FILE=cypress/config/cypress.config-configuration.js \
         CONFIG=downloadsFolder={{.test_suite_results_dir}}/downloads,screenshotsFolder={{.test_suite_results_dir}}/screenshots,videosFolder={{.test_suite_results_dir}}/videos
     info: '{{.result.systemout}}'
     assertions:
