update venom scenario

--- a/addons/vagrant/inventory/group_vars/standalones/venom_local_vars.yml
+++ b/addons/vagrant/inventory/group_vars/standalones/venom_local_vars.yml
@@ -54,7 +54,7 @@ venom_local_vars:
 
   - name: 'internet_int_netmask'
     value: "{{ ansible_default_ipv4['netmask'] }}"
-  
+
   - name: 'timezone'
     value: "{{ ansible_date_time['tz'] }}"
 
@@ -90,3 +90,9 @@ venom_local_vars:
 
   - name: 'fingerbank_api_key.email'
     value: "{{ users_vars[dict_name]['vars']['fingerbank_api_key']['email'] }}"
+
+  - name: 'pfappserver_project_id'
+    value: "{{ users_vars[dict_name]['vars']['psono_secrets']['pfappserver']['cypress_project_id'] }}"
+
+  - name: 'pfappserver_record_key'
+    value: "{{ users_vars[dict_name]['vars']['psono_secrets']['pfappserver']['cypress_record_key'] }}"
