--- a/t/html/pfappserver/Makefile
+++ b/t/html/pfappserver/Makefile
@@ -35,7 +35,8 @@ install-rhel:
 	yum install -y xorg-x11-server-Xvfb gtk2-devel gtk3-devel libnotify-devel GConf2 nss libXScrnSaver alsa-lib
 
 install-debian:
-	apt-get install libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+	apt-get update
+	apt-get install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
 
 install:
 	npm install cypress -g --allow-root --unsafe-perm=true
