--- a/t/venom/scenarios/pfappserver/playbooks/configure.yml
+++ b/t/venom/scenarios/pfappserver/playbooks/configure.yml
@@ -6,28 +6,6 @@
   vars:
     nodejs_version: "14.x"
     npm_config_unsafe_perm: "true"
-    debianPackages:
-      - libgtk2.0-0
-      - libgtk-3-0
-      - libgbm-dev
-      - libnotify-dev
-      - libgconf-2-4
-      - libnss3
-      - libxss1
-      - libasound2
-      - libxtst6
-      - xauth
-      - xvfb
-
-    el8Packages:
-      - xorg-x11-server-Xvfb
-      - gtk2-devel
-      - gtk3-devel
-      - libnotify-devel
-      - GConf2
-      - nss
-      - libXScrnSaver
-      - alsa-lib
 
   roles:
     # nodejs is already installed on Debian during build of Vagrant images
@@ -36,20 +14,24 @@
 
   tasks:
     - name: Install Cypress dependencies on debian
-      package:
-        name: "{{ debianPackages }}"
-        state: present
+      community.general.make:
+        chdir: /usr/local/pf/t/html/pfappserver
+        target: install-debian
+        file: /usr/local/pf/t/html/pfappserver/Makefile
+      become: yes
       when: ansible_facts['os_family'] == "Debian"
 
     - name: Install Cypress dependencies on el8
-      package:
-        name: "{{ el8Packages }}"
-        state: present
+      community.general.make:
+        chdir: /usr/local/pf/t/html/pfappserver
+        target: install-rhel
+        file: /usr/local/pf/t/html/pfappserver/Makefile
+      become: yes
       when: ansible_facts['os_family'] == "RedHat"
 
     - name: Install Cypress
-      steps:
-      - script: |
-          npm install cypress -g --allow-root --unsafe-perm=true
-        assertions:
-        - result.code ShouldEqual 0
+      community.general.make:
+        chdir: /usr/local/pf/t/html/pfappserver
+        target: install
+        file: /usr/local/pf/t/html/pfappserver/Makefile
+      become: yes
