--- a/t/venom/lib/html_e2e.yml
+++ b/t/venom/lib/html_e2e.yml
@@ -1,6 +1,6 @@
 executor: html_e2e
 input:
-  base_url: "{{.pfserver_webadmin_url}}"
+  base_url: ""
   config_file: "cypress/config/cypress.config.js"
   project_id: ""
   record_key: ""
@@ -8,11 +8,11 @@ input:
 steps:
 - type: exec
   script: |
-    make -C "{{.html.pfappserver_dir}}" test-e2e \
-      PROJECT_ID="{{.input.project_id}}" \
-      RECORD_KEY="{{.input.record_key}}" \
-      BASE_URL="{{.input.base_url}}" \
-      CONFIG_FILE="{{.input.config_file}}" \
+    make -C {{.html.pfappserver_dir}} test-e2e \
+      PROJECT_ID={{.input.project_id}} \
+      RECORD_KEY={{.input.record_key}} \
+      BASE_URL={{.input.base_url}} \
+      CONFIG_FILE={{.input.config_file}} \
       CONFIG="downloadsFolder={{.test_suite_results_dir}}/downloads,screenshotsFolder={{.test_suite_results_dir}}/screenshots,videosFolder={{.test_suite_results_dir}}/videos" \
       TAG="{{.input.tag}}" \
   # Info is only returned if assertion passes
