--- a/t/venom/test_suites/pfappserver_configurator/run_e2e.yml
+++ b/t/venom/test_suites/pfappserver_configurator/run_e2e.yml
@@ -1,30 +1,31 @@
 name: Run Cypress E2E Tests
 testcases:
 
-- name: get_psono_secret
+- name: get_psono_secrets
   steps:
   - type: exec
-    script: "psonoci secret get {{.psono_secrets.pfappserver.cypress_project_id}} password"
+    script: |
+      psonoci secret get "{{.html.pfappserver_cypress_project_id}}" password
     vars:
       project_id:
         from: result.systemout
     assertions:
-    - result.code ShouldEqual 1
+    - result.code ShouldEqual 0
   - type: exec
-    script: "psonoci secret get {{.psono_secrets.pfappserver.cypress_record_key}} password"
+    script: "psonoci secret get {{.html.pfappserver_cypress_record_key}} password"
     vars:
       record_key:
         from: result.systemout
     assertions:
-    - result.code ShouldEqual 1
+    - result.code ShouldEqual 0
 
 - name: run_e2e
   steps:
   - type: html_e2e
     base_url: "{{.html.pfappserver_baseurl}}"
     config_file: "cypress/config/cypress.config-configurator.js"
-    project_id: "{{.get_psono_secret.project_id}}"
-    record_key: "{{.get_psono_secret.record_key}}"
+    project_id: "{{.get_psono_secrets.project_id}}"
+    record_key: "{{.get_psono_secrets.record_key}}"
     info:
     - "{{.result.html_e2e_systemout}}"
     assertions:
