add script to unlock git-crypt

--- a/containers/git-sync/Dockerfile
+++ b/containers/git-sync/Dockerfile
@@ -4,5 +4,8 @@ USER 0:0
 
 RUN apt update && apt install git-crypt
 
+RUN echo "git-crypt unlock /var/run/git-crypt-key/git-crypt.key" > /usr/local/bin/pf-git-crypt-unlock
+RUN chmod a+x /usr/local/bin/pf-git-crypt-unlock
+
 USER 65533:65533
 
