--- a/containers/git-sync/Dockerfile
+++ b/containers/git-sync/Dockerfile
@@ -4,7 +4,7 @@ USER 0:0
 
 RUN apt update && apt install git-crypt
 
-RUN echo "git-crypt unlock /var/run/git-crypt-key/git-crypt.key" > /usr/local/bin/pf-git-crypt-unlock
+COPY containers/git-sync/pf-git-crypt-unlock /usr/local/bin/pf-git-crypt-unlock
 RUN chmod a+x /usr/local/bin/pf-git-crypt-unlock
 
 USER 65533:65533
