--- a/t/venom/scenarios/pfappserver/site.yml
+++ b/t/venom/scenarios/pfappserver/site.yml
@@ -5,4 +5,7 @@
 
 - import_playbook: playbooks/configure.yml
 
+- import_playbook: playbooks/localdev.yml
+  when: lookup("env", "CI") != 'true'
+
 - import_playbook: playbooks/run_tests.yml
