--- a/t/venom/test_suites/pfappserver_configurator/run_e2e.yml
+++ b/t/venom/test_suites/pfappserver_configurator/run_e2e.yml
@@ -1,31 +1,12 @@
 name: Run Cypress E2E Tests
 testcases:
 
-- name: get_psono_secrets
-  steps:
-  - type: exec
-    script: |
-      psonoci secret get "{{.html.pfappserver_cypress_project_id}}" password
-    vars:
-      project_id:
-        from: result.systemout
-    assertions:
-    - result.code ShouldEqual 0
-  - type: exec
-    script: "psonoci secret get {{.html.pfappserver_cypress_record_key}} password"
-    vars:
-      record_key:
-        from: result.systemout
-    assertions:
-    - result.code ShouldEqual 0
-
 - name: run_e2e
   steps:
   - type: html_e2e
     base_url: "{{.html.pfappserver_baseurl}}"
     config_file: "cypress/config/cypress.config-configurator.js"
-    project_id: "{{.get_psono_secrets.project_id}}"
-    record_key: "{{.get_psono_secrets.record_key}}"
+    tag: "pfappserver_configurator"
     info:
     - "{{.result.html_e2e_systemout}}"
     assertions:
