--- a/t/venom/scenarios/pfappserver/playbooks/localdev.yml
+++ b/t/venom/scenarios/pfappserver/playbooks/localdev.yml
@@ -1,6 +1,6 @@
 ---
 - hosts: pfservers
-  name: Setup localdev
+  name: Use local development sources
   become: True
 
   vars:
@@ -30,19 +30,12 @@
         source: local
       loop: "{{ docker_images }}"
 
-    - name: Create localdev .local_env, mounts /usr/local/pf/html/pfappserver/root
+    - name: Create containers/.local_env, mounts /usr/local/pf/html/pfappserver/root
       copy:
         dest: "/usr/local/pf/containers/.local_env"
         content: |
           LOCAL_DEV=true
           HTML_PFAPPSERVER_ROOT_MOUNT=/usr/local/pf/html/pfappserver/root
-
-    - name: Synchronize t/html/pfappserver
-      ansible.posix.synchronize:
-        src: "{{ lookup('env', 'VENOM_ROOT_DIR') }}/../html/pfappserver"
-        dest: '/usr/local/pf/t/html/'
-        archive: yes
-        delete: yes
 
     - name: Synchronize html/pfappserver/root/dist
       ansible.posix.synchronize:
@@ -58,7 +51,7 @@
         archive: yes
         delete: yes
 
-    - name: restart packetfence-httpd.admin_dispatcher
+    - name: Restart packetfence-httpd.admin_dispatcher (rebuild w/ containers/.local_env)
       ansible.builtin.service:
         name: packetfence-httpd.admin_dispatcher
         state: restarted
